--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NETFLIX</title>
-    <link rel="icon" type="image/x-icon" href="assests/img/logo/fav.ico">
+    <link rel="icon" type="image/x-icon" href="fav.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +13,7 @@
 
     <div class="main">
         <nav>
-            <span><img width="53" src="assests/img/logo/logo.svg" alt=""></span>
+            <span><img width="53" src="logo.svg" alt=""></span>
             <div>
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign in</button>
@@ -38,8 +38,8 @@
             <span>watch on smart TVs,Apple TV,Blu-ray players and more.</span>
         </div>
         <div class="secImg">
-            <img src="assests/img/tv.png" alt="">
-            <video src="assests/vid/gopro.mp4" autoplay loop muted></video>
+            <img src="tv.png" alt="">
+            <video src="gopro.mp4" autoplay loop muted></video>
         </div>
     </section>
 
@@ -48,7 +48,7 @@
     <section class="first second">
 
         <div class="secImg">
-            <img id="mobimg" src="assests/img/mobile.png" alt="">
+            <img id="mobimg" src="mobile.png" alt="">
         </div>
         <div>
             <span>Peaky Blinders</span>
@@ -66,8 +66,8 @@
             <span>Steam Unlimited movies and TV shows on your phone,tablet,laptop and TV.</span>
         </div>
         <div class="secImg">
-            <img src="assests/img/rajma.png" alt="">
-            <img id="bb" src="assests/img/bb.png" alt="">
+            <img src="rajma.png" alt="">
+            <img id="bb" src="bb.png" alt="">
         </div>
     </section>
     <div class="sepration"></div>
@@ -75,7 +75,7 @@
     <section class="first forth">
 
         <div class="secImg">
-            <img src="assests/img/bg.jpg" alt="">
+            <img src="bg.jpg" alt="">
         </div>
         <div>
             <span>Download your shows to watch offline</span>
