--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="secImg">
             <img src="tv.png" alt="">
-            <video src="gopro (1).mp4" autoplay loop muted></video>
+            <video src="gopro.mp4" autoplay loop muted></video>
         </div>
     </section>
 
